
skulls-x230 0.1.2 - released 2019-03-08
---------------------------------------
This release includes the following changes:
* based on coreboot commit 9276fe4089
* update coreboot-sdk to version 1.53
* increase RPi spi speed for flashing
* add -d option to me_cleaner


skulls-x230 0.1.1 - released 2019-01-18
---------------------------------------
This release includes the following changes:
* based on coreboot commit cd97982e2e
* updates and bugfixes in the scripts
* bootsplash logo added to the nonfree image


skulls-x230 0.1.0 - released 2018-12-19
---------------------------------------
This release includes the following changes:
* based on coreboot commit 2ca2acc51f
  (parent in master branch 47d6663bba)
* add an optional second image that includes SeaVGABIOS


skulls-x230 0.0.12 - released 2018-11-23
----------------------------------------
This release includes the following changes:
* based on coreboot commit 717f4d5e14
  (parent in master branch 3032d76778)
* updates SeaBIOS to version 1.12.0
* simplify unpacking the release archive by including a directory


skulls-x230 0.0.11 - released 2018-11-05
----------------------------------------
This release includes the following changes:
* based on coreboot commit 27ffa4c790
  (parent in master branch 715cb40963)
* -b option for external scripts for RPi SPI speed


skulls-x230 0.0.10 - released 2018-09-06
----------------------------------------
This release includes the following changes:
* based on coreboot commit 8823037d50
  (parent in master branch fb758d420b)
* updated latest original Lenovo BIOS version


skulls-x230 0.0.9 - released 2018-08-06
---------------------------------------
This release includes the following changes:
* based on coreboot commit 4591bb6f7b
  (parent in master branch 9ea7762e79)
* brightness level is remembered now
* added script to check for new releases
* improved installation scripts
* update coreboot-sdk to version 1.52


skulls-x230 0.0.8 - released 2018-07-06