@@ -27,6 +27,12 @@ function gitUpdate() {
     cd "$DOCKER_COREBOOT_DIR/3rdparty/blobs/" || exit
     git fetch --all --tags --prune
   fi
+
+  # update the blobs repo to include the microcode update we need
+  cd "$DOCKER_COREBOOT_DIR/3rdparty/blobs/" || exit
+  git pull https://review.coreboot.org/blobs refs/changes/66/32166/1
+  cd "$DOCKER_COREBOOT_DIR" || exit
+  git pull https://review.coreboot.org/coreboot refs/changes/67/32167/1
 }
 ################################################################################
 
