@@ -1,3 +1,10 @@
+skulls-x230 0.1.3 - unreleased
+---------------------------------------
+This release includes the following changes:
+* based on coreboot commit 8f0576f420
+  (parent in master branch 622a28d22b)
+* update Intel's microcode revision from 0x20 to 0x21
+
 
 skulls-x230 0.1.2 - released 2019-03-08
 ---------------------------------------
